--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "dependencies": {
     "chrome-aws-lambda": "^10.1.0",
+    "got": "^11.8.2",
     "puppeteer-core": "^10.2.0"
   }
 }
